# prompt-wars-challenge-4

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schemas.py  security.py
app/data/: stadium.json
app/providers/: __init__.py  base.py  gemini.py  mock.py  nvidia.py
app/routes/: __init__.py  api.py
app/services/: __init__.py  assistant.py  briefing.py  crowd.py  navigation.py
docs/: ACCESSIBILITY.md  CODE_QUALITY.md  DESIGN.md  EFFICIENCY.md  PROBLEM_STATEMENT.md  SECURITY.md  TESTING.md
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_crowd.py  test_navigation.py  test_provider_http.py  test_providers.py  test_security.py
